--- a/src/public/css/about-us.css
+++ b/src/public/css/about-us.css
@@ -1,5 +1,5 @@
     :root{
-        --icon_menu: url(../midia/icon_menu/icon_blue/about_us.png);
+        --icon_menu: url(./src/public/midia/icon_menu/icon_blue/about_us.png);
     }
     
     html,body{
