--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,5 +1,5 @@
 :root{
-    --icon_menu: url(../midia/icon_menu/icon_blue/home.png);
+    --icon_menu: url(./src/public/midia/icon_menu/icon_blue/home.png);
  }
  /*desktop*/
  @media all and (min-width: 1240px) {
